--- a/IceWand/IceWand.csproj
+++ b/IceWand/IceWand.csproj
@@ -38,16 +38,19 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="TerrariaServer">
+    <Reference Include="TerrariaServer, Version=0.0.0.0, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\TShockLib\TerrariaServer.exe</HintPath>
     </Reference>
-    <Reference Include="TShockAPI">
+    <Reference Include="TShockAPI, Version=4.0.0.923, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\TShockLib\TShockAPI.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IceWand.cs" />
-    <Compile Include="IWAction.cs" />
+    <Compile Include="IceWandEventArgs.cs" />
+    <Compile Include="IceWandAction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
